# egui-directx10

./: Cargo.toml  README.md  compile_shaders.bat  compile_shaders.ps1
examples/: main.rs
shaders/: egui.hlsl
src/: lib.rs  texture.rs
