[package]
name = "egui-directx10"
version = "0.12.1"
edition = "2024"
license = "MIT OR Apache-2.0"

repository = "https://github.com/philpax/egui-directx10"
authors = ["Philpax <me@philpax.me>", "Nekomaru <Nekomaru@pku.edu.cn>"]

description = "This crate provides a Direct3D10 renderer for `egui`."
categories = ["gui", "game-development"]
keywords = ["gui", "egui", "dx10", "d3d10", "directx10"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
log = "0.4.28"
egui = "0.33.0"
windows = { version = "0.62.2", default-features = false, features = [
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
]}

[dev-dependencies]
egui_demo_lib = "0.33.0"
egui-winit = { version = "0.33.0", default-features = false }
pretty_env_logger = "0.5.0"
winit = { version = "0.30.11", default-features = false, features = ["rwh_06"] }


